# transaction_processor

./: .gitignore  .gitlab-ci.yml  .gitmessage  Cargo.toml  LICENSE  README.md  setup.sh
git-hooks/: pre-commit
src/: lib.rs  main.rs
src/arguments/: mod.rs
src/config/: arguments.rs  mod.rs
src/future/: mod.rs
src/parser/: mod.rs
src/transaction/: account.rs  mod.rs  parser.rs  payee.rs  transaction_io.rs
src/transaction/formats/: ally_bank.rs  google_sheets.rs  mod.rs
src/transaction/formats/input/: ally_bank.rs  citi.rs  mod.rs
src/transaction/formats/output/: google_sheets.rs  mod.rs
src/transaction/transaction_io/: formats.rs  mod.rs
src/util/: mod.rs
src/web_driver/: config.rs  mod.rs
