[package]
name = "transaction_processor"
version = "0.1.0"
authors = ["\"Spencer Ferris\" <git@spencewenski.com>"]

[dependencies]
chrono = "0.4"
csv = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
regex = "1.0"
text_io = "0.1"
currency = "0.4"
num = "0.4.3"
anyhow = "1"
clap = { version = "4.5.39", features = ["derive"] }
